--- a/main.html
+++ b/main.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Breeds</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Dog Breeds</h1>
+    <p>Explore different dog breeds and learn more about them!</p>
 
+    <ul>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Golden_Retriever_2.jpg" alt="Golden Retriever" width="300">
+            </a>
+        </li>
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Standard_Poodle_image.jpg" alt="Poodle" width="300">
+            </a>
+        </li>
+    </ul>
 </body>
-
 </html>
+
+
