--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
 
     <ul>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/62/Golden_Retriever_2.jpg" alt="Golden Retriever" width="300">
+            <a href=Golden Retriever>
+                <img src=Golden Retriever img link	>
             </a>
         </li>
         <li>
-            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Standard_Poodle_image.jpg" alt="Poodle" width="300">
+            <a href=Poodle>
+                <img src=Poodle img link>
             </a>
         </li>
     </ul>
