--- a/main.html
+++ b/main.html
@@ -1,27 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dog Breeds</title>
-</head>
+<<!DOCTYPE html>
+<html>
 <body>
-    <h1>Dog Breeds</h1>
-    <p>Explore different dog breeds and learn more about them!</p>
-
     <ul>
         <li>
-            <a href=Golden Retriever>
-                <img src=Golden Retriever img link	>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever">
             </a>
         </li>
         <li>
-            <a href=Poodle>
-                <img src=Poodle img link>
+            <a href="https://en.wikipedia.org/wiki/Poodle">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle">
             </a>
         </li>
     </ul>
 </body>
 </html>
-
-
